// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartAxes snapshot renders 1`] = `
<div>
  <div
    class="className css-17hckkm"
  >
    <div
      class="css-p4msc0"
    >
      <div
        style="width: 240px;"
      >
        <div
          class="disabled css-1qqxhh3"
        />
      </div>
      <div
        class="css-g2toj0"
      >
        <div
          data-pie-readable="false"
          style="width: 232px; top: 170px; left: 0px; font-size: 16px; text-align: center; margin: 4px; padding: 4px 0px; transform: rotate(-90deg); transform-origin: 0 0; position: absolute;"
        >
          <div
            style="pointer-events: none; width: 100%;"
          />
        </div>
        <svg
          class="css-1fgebjo"
          height="240"
          width="240"
        >
          <g
            class="css-1umno4r"
            transform="translate(70, 40)"
          >
            <g
              class="css-633vv7"
            >
              <g
                class="vx-group vx-rows"
                transform="translate(0, 0)"
              />
              <g
                class="vx-group vx-rows"
                transform="translate(0, 0)"
              >
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="100"
                  y2="100"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="90"
                  y2="90"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="80"
                  y2="80"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="70"
                  y2="70"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="60"
                  y2="60"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="50"
                  y2="50"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="40"
                  y2="40"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="30.000000000000004"
                  y2="30.000000000000004"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="19.999999999999996"
                  y2="19.999999999999996"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="9.999999999999998"
                  y2="9.999999999999998"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                class="vx-group vx-columns"
                transform="translate(0, 0)"
              />
            </g>
            <g
              class="css-10e7bw3"
            >
              <g
                class="vx-group vx-axis vx-axis-left"
                transform="translate(0, 0)"
              >
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="100"
                    y2="100"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="100"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      />
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="90"
                    y2="90"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="90"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        1
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="80"
                    y2="80"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="80"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        2
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="70"
                    y2="70"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="70"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        3
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="60"
                    y2="60"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="60"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        4
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="50"
                    y2="50"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="50"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        5
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="40"
                    y2="40"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="40"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        6
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="30.000000000000004"
                    y2="30.000000000000004"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="30.000000000000004"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        7
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="19.999999999999996"
                    y2="19.999999999999996"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="19.999999999999996"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        8
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="9.999999999999998"
                    y2="9.999999999999998"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="9.999999999999998"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        9
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="0"
                    y2="0"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-20"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="0"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        10
                      </tspan>
                    </text>
                  </svg>
                </g>
                <line
                  class="vx-line vx-axis-line"
                  fill="transparent"
                  stroke="black"
                  stroke-width="1"
                  x1="0"
                  x2="0"
                  y1="0.5"
                  y2="100.5"
                />
              </g>
              <g
                class="vx-group vx-axis vx-axis-bottom"
                transform="translate(0, 100)"
              >
                <line
                  class="vx-line vx-axis-line"
                  fill="transparent"
                  stroke="black"
                  stroke-width="1"
                  x1="0.5"
                  x2="100.5"
                  y1="0"
                  y2="0"
                />
              </g>
            </g>
            <mask
              id="chart-2645"
            >
              <rect
                fill="white"
                height="230"
                width="120"
                x="-10"
                y="-75"
              />
            </mask>
            <g
              id="marks"
              mask="url('#chart-2645')"
            >
              <div />
            </g>
          </g>
        </svg>
      </div>
      <div
        data-pie-readable="false"
        style="width: 232px; top: 180px; left: -10px; font-size: 16px; text-align: center; margin: 4px; padding: 4px 0px; position: absolute;"
      >
        <div
          style="pointer-events: none; width: 100%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ChartAxes snapshot renders if size is not defined 1`] = `
<div>
  <div
    class="className css-17hckkm"
  >
    <div
      class="css-p4msc0"
    >
      <div
        style="width: 620px;"
      >
        <div
          class="disabled css-1qqxhh3"
        />
      </div>
      <div
        class="css-g2toj0"
      >
        <div
          data-pie-readable="false"
          style="width: 612px; top: 550px; left: 0px; font-size: 16px; text-align: center; margin: 4px; padding: 4px 0px; transform: rotate(-90deg); transform-origin: 0 0; position: absolute;"
        >
          <div
            style="pointer-events: none; width: 100%;"
          />
        </div>
        <svg
          class="css-1fgebjo"
          height="620"
          width="620"
        >
          <g
            class="css-1umno4r"
            transform="translate(70, 40)"
          >
            <g
              class="css-633vv7"
            >
              <g
                class="vx-group vx-rows"
                transform="translate(0, 0)"
              />
              <g
                class="vx-group vx-rows"
                transform="translate(0, 0)"
              >
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="480"
                  y2="480"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="432"
                  y2="432"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="384"
                  y2="384"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="336"
                  y2="336"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="288"
                  y2="288"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="240"
                  y2="240"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="192"
                  y2="192"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="144.00000000000003"
                  y2="144.00000000000003"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="95.99999999999997"
                  y2="95.99999999999997"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="47.999999999999986"
                  y2="47.999999999999986"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="480"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                class="vx-group vx-columns"
                transform="translate(0, 0)"
              />
            </g>
            <g
              class="css-10e7bw3"
            >
              <g
                class="vx-group vx-axis vx-axis-left"
                transform="translate(0, 0)"
              >
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="480"
                    y2="480"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="480"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      />
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="432"
                    y2="432"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="432"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        1
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="384"
                    y2="384"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="384"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        2
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="336"
                    y2="336"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="336"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        3
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="288"
                    y2="288"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="288"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        4
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="240"
                    y2="240"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="240"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        5
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="192"
                    y2="192"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="192"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        6
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="144.00000000000003"
                    y2="144.00000000000003"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="144.00000000000003"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        7
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="95.99999999999997"
                    y2="95.99999999999997"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="95.99999999999997"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        8
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="47.999999999999986"
                    y2="47.999999999999986"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="47.999999999999986"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        9
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="0"
                    y2="0"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-20"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="0"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        10
                      </tspan>
                    </text>
                  </svg>
                </g>
                <line
                  class="vx-line vx-axis-line"
                  fill="transparent"
                  stroke="black"
                  stroke-width="1"
                  x1="0"
                  x2="0"
                  y1="0.5"
                  y2="480.5"
                />
              </g>
              <g
                class="vx-group vx-axis vx-axis-bottom"
                transform="translate(0, 480)"
              >
                <line
                  class="vx-line vx-axis-line"
                  fill="transparent"
                  stroke="black"
                  stroke-width="1"
                  x1="0.5"
                  x2="480.5"
                  y1="0"
                  y2="0"
                />
              </g>
            </g>
            <mask
              id="chart-1553"
            >
              <rect
                fill="white"
                height="610"
                width="500"
                x="-10"
                y="-75"
              />
            </mask>
            <g
              id="marks"
              mask="url('#chart-1553')"
            >
              <div />
            </g>
          </g>
        </svg>
      </div>
      <div
        data-pie-readable="false"
        style="width: 612px; top: 560px; left: -10px; font-size: 16px; text-align: center; margin: 4px; padding: 4px 0px; position: absolute;"
      >
        <div
          style="pointer-events: none; width: 100%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ChartAxes snapshot renders with chartType property and empty charts property 1`] = `<div />`;

exports[`ChartAxes snapshot renders without chartType and charts properties 1`] = `<div />`;

exports[`ChartAxes snapshot renders without chartType property 1`] = `
<div>
  <div
    class="className css-17hckkm"
  >
    <div
      class="css-p4msc0"
    >
      <div
        style="width: 240px;"
      >
        <div
          class="disabled css-1qqxhh3"
        />
      </div>
      <div
        class="css-g2toj0"
      >
        <div
          data-pie-readable="false"
          style="width: 232px; top: 170px; left: 0px; font-size: 16px; text-align: center; margin: 4px; padding: 4px 0px; transform: rotate(-90deg); transform-origin: 0 0; position: absolute;"
        >
          <div
            style="pointer-events: none; width: 100%;"
          />
        </div>
        <svg
          class="css-1fgebjo"
          height="240"
          width="240"
        >
          <g
            class="css-1umno4r"
            transform="translate(70, 40)"
          >
            <g
              class="css-633vv7"
            >
              <g
                class="vx-group vx-rows"
                transform="translate(0, 0)"
              />
              <g
                class="vx-group vx-rows"
                transform="translate(0, 0)"
              >
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="100"
                  y2="100"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="90"
                  y2="90"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="80"
                  y2="80"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="70"
                  y2="70"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="60"
                  y2="60"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="50"
                  y2="50"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="40"
                  y2="40"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="30.000000000000004"
                  y2="30.000000000000004"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="19.999999999999996"
                  y2="19.999999999999996"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="9.999999999999998"
                  y2="9.999999999999998"
                />
                <line
                  class="vx-line"
                  fill="transparent"
                  stroke="#eaf0f6"
                  stroke-width="1"
                  style="stroke: #8E88EA; stroke-width: 1;"
                  x1="0"
                  x2="100"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                class="vx-group vx-columns"
                transform="translate(0, 0)"
              />
            </g>
            <g
              class="css-10e7bw3"
            >
              <g
                class="vx-group vx-axis vx-axis-left"
                transform="translate(0, 0)"
              >
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="100"
                    y2="100"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="100"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      />
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="90"
                    y2="90"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="90"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        1
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="80"
                    y2="80"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="80"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        2
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="70"
                    y2="70"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="70"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        3
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="60"
                    y2="60"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="60"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        4
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="50"
                    y2="50"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="50"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        5
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="40"
                    y2="40"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="40"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        6
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="30.000000000000004"
                    y2="30.000000000000004"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="30.000000000000004"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        7
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="19.999999999999996"
                    y2="19.999999999999996"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="19.999999999999996"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        8
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="9.999999999999998"
                    y2="9.999999999999998"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-15"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="9.999999999999998"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        9
                      </tspan>
                    </text>
                  </svg>
                </g>
                <g
                  class="vx-group vx-axis-tick"
                  transform="translate(0, 0)"
                >
                  <line
                    class="vx-line"
                    fill="transparent"
                    stroke="black"
                    x1="0"
                    x2="-10"
                    y1="0"
                    y2="0"
                  />
                  <svg
                    style="overflow: visible;"
                    x="-20"
                    y="4"
                  >
                    <text
                      text-anchor="start"
                      x="-10"
                      y="0"
                    >
                      <tspan
                        dy="0em"
                        x="-10"
                      >
                        10
                      </tspan>
                    </text>
                  </svg>
                </g>
                <line
                  class="vx-line vx-axis-line"
                  fill="transparent"
                  stroke="black"
                  stroke-width="1"
                  x1="0"
                  x2="0"
                  y1="0.5"
                  y2="100.5"
                />
              </g>
              <g
                class="vx-group vx-axis vx-axis-bottom"
                transform="translate(0, 100)"
              >
                <line
                  class="vx-line vx-axis-line"
                  fill="transparent"
                  stroke="black"
                  stroke-width="1"
                  x1="0.5"
                  x2="100.5"
                  y1="0"
                  y2="0"
                />
              </g>
            </g>
            <mask
              id="chart-4286"
            >
              <rect
                fill="white"
                height="230"
                width="120"
                x="-10"
                y="-75"
              />
            </mask>
            <g
              id="marks"
              mask="url('#chart-4286')"
            >
              <div />
            </g>
          </g>
        </svg>
      </div>
      <div
        data-pie-readable="false"
        style="width: 232px; top: 180px; left: -10px; font-size: 16px; text-align: center; margin: 4px; padding: 4px 0px; position: absolute;"
      >
        <div
          style="pointer-events: none; width: 100%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ChartAxes snapshot renders without chartType property and empty charts property 1`] = `<div />`;
